settings layout editTicket

--- a/src/app/page/ticket/ticket-edit/ticket-edit.component.html
+++ b/src/app/page/ticket/ticket-edit/ticket-edit.component.html
@@ -1,17 +1,83 @@
 <header-component></header-component>
-<div class="container" style="overflow-x:auto;">
-  <div class="content">
-    <div class="contentTicket">
-      <section class="messageContact" style="border-radius: 50px 50px 50px 0px;">
-        <label for="">Paulinho Gogo: </label>
-        <span>há 2 dias</span>
-        <p>Estamos precisando que bobina para o relógio ponto,  pois só temos 1 em estoque.</p>
-      </section>
-      <section class="messageAgente" style="border-radius: 50px 50px 0px 50px;">
-        <label>Alan Junior:</label>
-        <span>há 3 minutos atrás</span>
-        <p>Estamos precisando que bobina para o relógio ponto,  pois só temos 1 em estoque.</p>
-      </section>
-    <div class="proprietyTicket"></div>
+<div class="container">
+  <div class="content" style="display: flex;">
+    <div style="width: 100%;">
+      <div class="contentTicket" style="width: 100%;">
+        <section class="messageContact" style="border-radius: 50px 50px 50px 0px;">
+          <div>
+            <div class="headerMessage">
+              <label for="">Paulinho Gogo: </label>
+              <span style="font-style: italic;">há 2 dias</span>
+            </div>
+
+            <p>Estamos precisando que bobina para o relógio ponto,  pois só temos 1 em estoque.</p>
+          </div>
+        </section>
+        <section class="messageAgent" style="border-radius: 50px 50px 0px 50px;">
+          <div>
+            <div class="headerMessage">
+              <label>Alan Junior:</label>
+              <span style="font-style: italic;">há 3 minutos atrás</span>
+            </div>
+          <p>Estamos precisando que bobina para o relógio ponto,  pois só temos 1 em estoque.</p>
+          </div>
+        </section>
+        <section class="messageContact" style="border-radius: 50px 50px 50px 0px;">
+          <div>
+            <div class="headerMessage">
+              <label for="">Paulinho Gogo: </label>
+              <span style="font-style: italic;">há 2 dias</span>
+            </div>
+            <p>Estamos precisando que bobina para o relógio ponto,  pois só temos 1 em estoque.</p>
+          </div>
+        </section>
+        <section class="messageAgent" style="border-radius: 50px 50px 0px 50px;">
+          <div>
+            <div class="headerMessage">
+              <label>Alan Junior:</label>
+              <span style="font-style: italic;">há 3 minutos atrás</span>
+            </div>
+          <p>Estamos precisando que bobina para o relógio ponto,  pois só temos 1 em estoque.</p>
+          </div>
+        </section>
+       </div>
+       <div class="cardTextArea" style="margin-top: 10px">
+
+        <div>
+          <textarea name="" id="" cols="30" rows="10"></textarea>
+        </div>
+      </div>
+    </div>
+  <div class="proprietyTicket">
+    <div class="headerPropriety">
+      <h2>Propriedades do chamado</h2>
+      <div>
+        <span style="background-color: #e1f5fe; color:#179be7;">Novo</span>
+        <span></span>
+      </div>
+    </div>
+    <div class="inputSelects">
+      <label>
+        Propriedade
+        <input type="text">
+      </label>
+      <label>
+        Tipo
+        <input type="text">
+      </label>
+      <label>
+        Aplicação
+        <input type="text">
+      </label>
+      <label>
+        Status
+        <input type="text">
+      </label>
+      <label>
+        Analista
+        <input type="text">
+      </label>
+    </div>
+    <button  class="btnUpdateTicket">Atualizar</button>
   </div>
 </div>
