--- a/src/app/page/ticket/ticket.component.html
+++ b/src/app/page/ticket/ticket.component.html
@@ -114,6 +114,8 @@
               </div>
             </div>
           </td>
+          <!--Fim da Lista de prioridade-->
+          <!--Inicio da Lista de status-->
           <td style="width: 120px" class="lt-cell">
             <div (click)="dropdownStatus()">
               {{ ticket.status }}
@@ -125,6 +127,7 @@
               </ul>
             </div>
           </td>
+          <!--Fim da Lista de status-->
         </tr>
       </tbody>
     </table>
