--- a/src/app/page/user/user.component.html
+++ b/src/app/page/user/user.component.html
@@ -37,7 +37,7 @@
                  <mat-icon class="ripple"  color="accent">edit</mat-icon>
                </a>
                 <!--colocal tooltip-->
-               <a (click)="deleteUser(user)">
+               <a (click)="showAlertDialog(user)">
                  <mat-icon color="warn">delete</mat-icon>
                </a>
              </td>
