--- a/src/app/page/ticket/ticket-edit/ticket-edit.component.scss
+++ b/src/app/page/ticket/ticket-edit/ticket-edit.component.scss
@@ -3,17 +3,118 @@
   height: 100vh;
   background: #e1e5ee;
   .content{
-    padding: 20px 0;
     margin: none auto;
-    background: #f9fbff;
 
     .contentTicket{
+      overflow-y: auto;
+      max-height: 550px;
+      padding: 10px;
+      box-shadow: 0px 0px 2px 2px rgba(0, 0, 0, 0.10);
+      border-radius: 10px;
+      background: #fff;
 
-      section{
-        background: #FFFFFF;
-        box-shadow: 0px 0px 2px 2px rgba(0, 0, 0, 0.25);
+      &::-webkit-scrollbar{
+        width: 5px;
+      }
+      &::-webkit-scrollbar-track {
+        background: #f1f1f1;
+      }
+      &::-webkit-scrollbar-thumb {
+        background: #888;
+      }
+      &::-webkit-scrollbar-thumb:hover {
+        background: #555;
       }
 
+      section{
+        height: 150px;
+        background: #FFFFFF;
+        box-shadow: 0px 0px 2px 2px rgba(0, 0, 0, 0.10);
+        margin-bottom: 10px;
+        display: flex;
+        justify-content: center;
+
+        div{
+          width: 100%;
+          padding: 0px 10px;
+
+          label{
+            font-weight: 500;
+          }
+        }
+
+      }
+
+      .messageContact{
+          padding: 0 15px;
+        .headerMessage{
+          margin-top: 10px;
+          padding: 0 5px;
+          display: flex;
+          flex-direction: column;
+        }
+
+        p{
+          word-wrap: break-word;
+        }
+      }
+
+      .messageAgent{
+        background: #a4abc9;
+        padding: 0 15px;
+
+
+        .headerMessage{
+          margin-top: 10px;
+          padding: 0 5px;
+          display: flex;
+          flex-direction: column;
+          align-items: flex-end;
+        }
+        p{
+          word-wrap: break-word;
+        }
+      }
+
+    }
+
+    .proprietyTicket{
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      margin: 0 10px;
+      padding: 10px;
+      height: 400px;
+      width: 30%;
+      background: #FFFFFF;
+      box-shadow: 0px 0px 2px 2px rgba(0, 0, 0, 0.05);
+
+      .headerPropriety{
+        margin: 0px 10px;
+      }
+
+      .inputSelects{
+        margin: 10px 10px;
+       label{
+        margin-top: 5px;
+        display: flex;
+        flex-direction: column;
+       }
+      }
+
+      .btnUpdateTicket{
+        //display: block;
+        width: 100%;
+        padding: 10px 0px;
+        border: none;
+        box-shadow: 0px 0px 2px 2px rgba(0, 0, 0, 0.05);
+        border-radius: 5px;
+        background: #2962ff;
+        font-size: 14px;
+        font-weight: 500;
+        color: #fff;
+        letter-spacing: 1.5px;
+      }
     }
   }
 }
