fixed page ticket and header

--- a/src/app/page/ticket/ticket-edit/ticket-edit.component.html
+++ b/src/app/page/ticket/ticket-edit/ticket-edit.component.html
@@ -50,9 +50,9 @@
     </div>
   <div class="proprietyTicket">
     <div class="headerPropriety">
-      <h2>Propriedades do chamado</h2>
+      <h2 style="color: #a4abc9;">Propriedades do chamado</h2>
       <div>
-        <span style="background-color: #e1f5fe; color:#179be7;">Novo</span>
+        <span style="background-color: #e1f5fe; color:#179be7; padding: 2px 5px;">Novo</span>
         <span></span>
       </div>
     </div>
