--- a/src/components/header/header.component.scss
+++ b/src/components/header/header.component.scss
@@ -36,4 +36,12 @@
     }
   }
 
+  @media screen and (max-width: 1124px) {
+    button{
+      padding: 0 5px;
+      font-size: .7rem;
+
+    }
+  }
+
 
