--- a/src/components/sidebar/sidebar.component.html
+++ b/src/components/sidebar/sidebar.component.html
@@ -18,7 +18,7 @@
       <span class="tooltip">Dashboard</span>
     </li>
     <li>
-      <a routerLink="/tickets">
+      <a routerLinkActive="links_name" routerLink="/tickets">
         <mat-icon class="mat-18">support_agent</mat-icon>
         <span class="links_name">Chamado</span>
       </a>
