--- a/src/components/sidebar/sidebar.component.html
+++ b/src/components/sidebar/sidebar.component.html
@@ -32,7 +32,7 @@
       <span class="tooltip">Soluções</span>
     </li>
     <li>
-      <a href="#">
+      <a routerLinkActive="links_name" routerLink="/employees">
         <mat-icon class="mat-18">contact_page</mat-icon>
         <span class="links_name">Contatos</span>
       </a>
