--- a/src/app/page/employee/employee-edit/employee-edit.component.html
+++ b/src/app/page/employee/employee-edit/employee-edit.component.html
@@ -1,31 +1,22 @@
-<form [formGroup]="form">
+<div class="container">
+  <form [formGroup]="form">
+    <switch-component
+        label="Ativo"
+        name="active"
+        formControlName="active"
+      ></switch-component>
+    <input-component label="Nome" type="text" name="name" formControlName="name" errorMessage="O campo Nome é obrigatório!"></input-component>
+    <input-component label="Departamento" type="text" name="department" formControlName="department"></input-component>
+    <input-component label="Fone" type="text" name="phone" formControlName="phone"></input-component>
 
-  <div class="form-group">
-    <label for="nome">Nome</label>
-    <input type="text" class="form-control" name="name" formControlName="name" required>
-  </div>
+    <div style="display: flex; flex-direction: column;">
+      <img [src]="imageUrl" alt="">
+      <input formControlName="photos" type="file" accept="image/*" (change)="inputFile($event)">
+      <textarea [innerHTML]="base64"></textarea>
+      <button (click)="convertBase64()">Converter</button>
+    </div>
+    <button (click)="onSubmit()">Salvar</button>
+    <a href="#" class="btn btn-secondary mt-4 ml-2">Cancelar</a>
+  </form>
 
-  <div class="form-group">
-    <label for="department">Departamento</label>
-    <input type="text" class="form-control" name="department" formControlName="department">
-  </div>
-
-  <div class="form-group">
-    <label for="phone">Fone</label>
-    <input type="text" class="form-control" name="phone" formControlName="phone">
-  </div>
-
-  <div class="form-check">
-    <input class="form-check-input" type="checkbox" name="active" formControlName="active">
-    <label class="form-check-label" for="active">Ativo</label>
-  </div>
-  <div style="display: flex; flex-direction: column;">
-    <img [src]="imageUrl" alt="">
-    <input type="file" accept="image/*" (change)="inputFile($event)">
-    <textarea [innerHTML]="base64"></textarea>
-    <button (click)="convertBase64()">Converter</button>
-  </div>
-  <button (click)="onSubmit()">Salvar</button>
-  <a href="#" class="btn btn-secondary mt-4 ml-2">Cancelar</a>
-
-</form>
+</div>
