--- a/src/app/page/employee/employee-edit/employee-edit.component.scss
+++ b/src/app/page/employee/employee-edit/employee-edit.component.scss
@@ -1,3 +1,12 @@
+.container{
+  //height: 100vh;
+  width: 80%;
+  padding: 20px;
+  margin: 40px auto;
+  border-radius: 20px;
+  box-shadow: 0 0 2px 0 rgba($color: #000000, $alpha: 1.0)
+}
+
 img{
   width: 150px;
   height: 150px;
