--- a/src/components/sidebar/sidebar.component.html
+++ b/src/components/sidebar/sidebar.component.html
@@ -11,7 +11,7 @@
   </div>
   <ul class="nav_list">
     <li>
-      <a routerLink="/">
+      <a routerLink="/home">
         <mat-icon class="mat-18">grid_view</mat-icon>
         <span class="links_name">Dashboard</span>
       </a>
