--- a/src/components/sidebar/sidebar.component.html
+++ b/src/components/sidebar/sidebar.component.html
@@ -62,7 +62,7 @@
           <div class="job">Web Designer</div>
         </div>
       </div>
-      <mat-icon #log_out>logout</mat-icon>
+      <mat-icon #log_out (click)="logout()">logout</mat-icon>
     </div>
   </div>
 </div>
