--- a/src/app/page/login/login.component.html
+++ b/src/app/page/login/login.component.html
@@ -1,1 +1,23 @@
-<p>login works!</p>
+<form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+  <div class="form-group">
+    <label for="username">
+      <input type="text" formControlName="email">
+    </label>
+    <div *ngIf="submitted && f.email.errors" class="invalid-feedback">
+      <span *ngIf="f.email.errors.required">Usuário é obrigatório!</span>
+    </div>
+  </div>
+  <div class="form-group">
+    <label for="password">
+      <input type="text" formControlName="password">
+    </label>
+    <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
+      <span *ngIf="f.password.errors.required">Senha é obrigatório!</span>
+    </div>
+  </div>
+  <button [disabled]="loading">
+    <span *ngIf="loading">...</span>
+    Entrar
+  </button>
+  <div *ngIf="error">{{error}}</div>
+</form>
